# damm-v1-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/workflows/: ci_rust.yml  ci_ts.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/dynamic_amm/: ix_account_builder.rs  mod.rs  pda.rs
common/src/dynamic_vault/: aux_lp_mint.rs  mod.rs  pda.rs
programs/dynamic-amm/: Cargo.toml
programs/dynamic-amm/src/: lib.rs  seed.rs  state.rs
programs/dynamic-amm/src/instructions/: initialize_customizable_permissionless_constant_product_pool.rs  initialize_permissionless_pool.rs  initialize_permissionless_pool_with_config.rs  mod.rs  move_locked_lp.rs
programs/dynamic-vault/: Cargo.toml
programs/dynamic-vault/src/: lib.rs
rust-client/: Cargo.toml
rust-client/src/instructions/dynamic_amm/: create_pool.rs  mod.rs
ts-client/: README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.esm.json
ts-client/src/amm/: idl.ts  index.ts  utils.ts
ts-client/src/amm/curve/: stable-swap.ts
ts-client/src/amm/tests/: constantProduct.test.ts  error.test.ts  stableSwap.test.ts
ts-client/src/amm/types/: index.ts
