[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.package]
version = "0.0.5"
authors = ["Andrew"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = "symbols"
overflow-checks = true
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
